@@ -1,3 +1,7 @@
+2002-11-04  Forgotten  <forgotten@users.sourceforge.net>
+
+	* src/GBA.cpp (CPUUpdateRegister): do not change timer data when writting to register TMxD. Only a restart or overflow will change the value
+
 2002-11-02  Forgotten  <forgotten@users.sourceforge.net>
 
 	* src/GBA.cpp (CPUWriteGSASnapshot): Compute CRC of save
